added Signature mechanism with coordinated signs uploads and tested the apis